--- a/styles/profissional.css
+++ b/styles/profissional.css
@@ -11,6 +11,8 @@ body {
 
 a {
     cursor: pointer;
+    text-decoration: none;
+    color: #ff008c;
 }
 
 header {
@@ -37,6 +39,7 @@ h1 {
 .menuitem {
     margin: 10px;
     font-size: x-large;
+    text-shadow: 1px 2px 1px #ccc;
 }
 
 
@@ -90,13 +93,10 @@ footer {
     padding: 10px 20px 10px;
     position: relative;
     text-align: center;
-    border-radius: 20px;
+    border-radius: 20px 20px 0 0;
     bottom: 0;
     color: #fff;
     text-shadow: 1px 2px 2px #000;
     font-weight: bolder;
     font-size: 17px;
-}
-footer a {
-    color: #ff008c;
 }
